# accountir

./: BOOKKEEPING_HARD_RULES.md  Cargo.toml  PLAYBOOK.md  README_ONBOARDING.md  RECON_SPEC.md  REFACTOR_STRATEGY.md  accountir.dbj  docker-compose.yml
.claude/agents/: tax-agent.md
cloud/: .env.example  Cargo.toml
cloud/migrations/: 0001_auth.sql  0002_tenant.sql  0003_chat.sql  0004_invitations.sql  0005_invoicing.sql  0006_invoice_public_access.sql  0007_statement_lines.sql  0008_agent_sessions.sql  0009_documents.sql  0010_tax.sql  0011_personal.sql  0012_address_book.sql  0013_company_files.sql  0014_document_year.sql  0015_statement_lines_rls.sql  0016_wise.sql  0017_crypto_provenance.sql  0018_entry_sources.sql  0019_vendor_links.sql  0020_supporting_docs.sql  0021_vendor_tax_id.sql  0022_entry_categories.sql  0023_owner_signatures.sql  0024_tax_form_signed.sql  0025_entry_notes.sql  0026_tax_form_annotations.sql
cloud/scripts/: pdfform.py
cloud/src/: config.rs  db.rs  doc_ai.rs  docgen.rs  error.rs  file_store.rs  lib.rs  main.rs  onchain.rs  queries.rs  signature.rs  statement_processor.rs  statement_upload.rs  wise.rs
cloud/src/ai/: agent.rs  anthropic.rs  chat.rs  mod.rs  tools.rs
cloud/src/auth/: middleware.rs  mod.rs  password.rs  session.rs
cloud/src/commands/: account.rs  entry.rs  invoice.rs  mod.rs  mutations.rs
cloud/src/email/: mod.rs
cloud/src/http/: auth_routes.rs  mcp_routes.rs  mod.rs  plaid_routes.rs  tenant_routes.rs
cloud/src/plaid/: client.rs  crypto.rs  mod.rs  statements.rs  sync.rs  webhook_verify.rs
cloud/src/store/: event_store.rs  mod.rs  projections.rs
cloud/src/tax/: lob.rs  mod.rs  prepare.rs  review.rs  runtime.rs
cloud/src/tenant/: mod.rs
cloud/src/web/: mod.rs  routes.rs
cloud/templates/: accept_invite.html  accounts_list.html  accounts_new.html  address_book.html  admin_companies.html  admin_members.html  admin_settings.html  banks_link.html  banks_list.html  base.html  chat.html  customer_new.html  customers_list.html  dashboard.html  documents.html  entries_list.html  entries_new.html  entry_detail.html  entry_line_fragment.html  invoice_detail.html  invoice_new.html  invoice_public.html  invoices_list.html  login.html  report_balance.html  report_cashflow.html  report_income.html  reports_index.html  signup.html  tax_documents.html  tax_editor.html  tax_filing.html  transactions.html  trial_balance.html  vendors.html  wise.html
core/: Cargo.toml
core/src/: lib.rs
core/src/events/: types.rs  validation.rs
migrations/: 008_crypto.sql  009_bank_statement_files.sql
src/: config.rs  lib.rs  main.rs
src/commands/: crypto_commands.rs  import_commands.rs  mod.rs
src/crypto/: explorer.rs  mod.rs
src/server/: app_transaction_detail.html  app_transactions.html  app_vendor.html  mod.rs
src/store/: migrations.rs  (+1 more)
tax/: .gitignore  AGENT_BRIEF.md  FORM_COVERAGE.md  README.md  RECONCILIATION.md  genspec.ts  taxpdf.ts
tests/: accounting_integration.rs
(+158 files in other folders)
