[package]
name = "accountir-cloud"
version = "0.1.0"
edition = "2021"
description = "Multi-tenant SaaS server for Accountir"
license = "AGPL-3.0-or-later"

# Cloud lives outside the parent workspace so that sqlx-sqlite (transitively
# evaluated by the sqlx meta-crate) does not clash with rusqlite's bundled
# libsqlite3-sys in the local-first crate.
[workspace]

[[bin]]
name = "accountir-cloud"
path = "src/main.rs"

[[bin]]
name = "accountir-agentd"
path = "src/bin/agentd.rs"

[dependencies]
# Reuse pure domain + event types (no rusqlite, no TUI)
accountir-core = { path = "../core" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# HTTP server
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie", "cookie-private", "typed-header", "query"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "migrate",
  "json",
  "uuid",
  "chrono",
  "rust_decimal",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Identifiers + time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Money
rust_decimal = { version = "1", features = ["serde"] }

# Crypto
sha2 = "0.10"
hex = "0.4"
argon2 = "0.5"
rand = "0.8"
# Plaid webhook JWT (JWS, ES256) verification
jsonwebtoken = "9"

# Errors
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy = "0.15"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Cookie max-age (axum_extra's cookie crate uses time::Duration)
time = "0.3"

# Plaid HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }

# Authenticated encryption for Plaid access tokens
aes-gcm = "0.10"

# PDF text extraction for Plaid Statements parsing
pdf-extract = "0.7"

# Server-side HTML templating + form parsing for the web UI
askama = "0.12"
serde_urlencoded = "0.7"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
