[package]
name = "accountir-core"
version = "0.3.0"
edition = "2021"
description = "Pure domain types and event taxonomy for Accountir (no DB deps)"
license = "AGPL-3.0-or-later"
repository = "https://github.com/zakvdm/accountir"

[lib]
name = "accountir_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
